updated at: 2023-04-25 21:11, VRchat用アバター「レイ」 - 麻婆弾ストア - BOOTH

--- a/VRChat/64/928064.html
+++ b/VRChat/64/928064.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "HKw7+qPz+jQl0k8uCKqol14fIAsvsveBxzwZP50Afi0="></script>
+    "/H+6PjGYn4+K5YZU/BeSkX74Jl7gYRPzKr6KZT1x7l4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRchat用アバター「レイ」","description":"VRchat用アバターです。\n上着のオレンジ色の部分は明滅したりとかします。\n\n\n導入方法：\nVRCSDK及びCubeds-Unity-Shadersを導入したunityプロジェクトにunitypackageファイルを読み込んで下さい。\nその後、modelフォルダ内部にある「modelA04」をシーンにドラッグ＆ドロップして下さい。\n(サムネイル4枚目参照)\n\nリップシンク設定及びカメラ位置は設定済みとなっています。\n(正常にVRCSDKが導入済みのプロジェクトに導入した場合)\n\n\n\nVRCSDKの導入方法など\nhttp://vrchatjp.playing.wiki/d/%a5%a2%a5%d0%a5%bf%a1%bc%a4%ce%ba%ee%c0%ae\n\nCubeds-Unity-Shadersの導入方法\nhttp://vrchatjp.playing.wiki/d/Cubeds-Unity-Shaders\n\n\nVRChat用に調整してありますが、\n・モデルの改変\n・ゲームや動画等vrchat外での利用\nは可能です。\n\n・再配布及び再販売\n・特定個人や団体への中傷等を目的とした利用\nは禁じます。\n\n不明点はTwitterの@mabo_to_fuまで。","url":"https://booth.pm/ja/items/928064","offers":{"priceCurrency":"JPY","@type":"Offer","price":"800"},"image":"https://booth.pximg.net/c/620x620/dd09d57d-ff0e-4d48-b34c-08c891168638/i/928064/48a39abf-9184-42c7-a4c9-ba39b33cb8a2_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="HKw7+qPz+jQl0k8uCKqol14fIAsvsveBxzwZP50Afi0="></script>
+    nonce="/H+6PjGYn4+K5YZU/BeSkX74Jl7gYRPzKr6KZT1x7l4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/928064/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               16
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/928064/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               16
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
