updated at: 2023-04-25 21:11, クラムシェル型スマートフォン 3DCGモデル - ガラスの万華鏡 BOOTH店 - BOOTH

--- a/VRChat/34/927734.html
+++ b/VRChat/34/927734.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "CJDc7hgmEaZMa8rb5wU2H6Vo2qbqpurgPwpTSpZj4Q8="></script>
+    "ouCOZC2SZktuzD/w6X5gUYrs+nC5eef4bh2f3MdohWk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"クラムシェル型スマートフォン 3DCGモデル","description":"QWERTYキーボード搭載クラムシェル型スマートフォンの3DCGモデルです。\n\nキャラクターに持たせるもよし、そのままVRChatなどでアバターとして使うもよし。もちろん動画やゲーム制作での利用も可能、様々な用途にお使い頂けます。","url":"https://booth.pm/ja/items/927734","offers":{"priceCurrency":"JPY","@type":"Offer","price":"400"},"image":"https://booth.pximg.net/c/620x620/39edc5c4-fd37-4865-94df-88cfbc8cbd88/i/927734/aff2507f-144f-46b4-a843-cb7d37a8970b_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="CJDc7hgmEaZMa8rb5wU2H6Vo2qbqpurgPwpTSpZj4Q8="></script>
+    nonce="ouCOZC2SZktuzD/w6X5gUYrs+nC5eef4bh2f3MdohWk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -163,7 +165,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/927734/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               57
@@ -178,14 +180,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/927734/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               57
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
