--- a/VRChat/99/927399.html
+++ b/VRChat/99/927399.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "tiWtnNHCHe6h6M6fnnMZ3fktywbpAFoaKqT0fXPHXdI="></script>
+    "NnhFojNk5kflXq0nEbcJRJ84zn79MPr4w1a2eXV8dDg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"SobaChan 3DCGモデル","description":"知る人ぞ知るアプリ「SobaCha」のイメージキャラクターSobaChanが、ついに3Dで登場！\n\nVRChatでの使用を想定して制作されていますが、その他の用途(動画制作、ゲーム、アプリ開発……etc)にもお使い頂けます。","url":"https://booth.pm/ja/items/927399","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"2700","highPrice":"2900"},"image":"https://booth.pximg.net/c/620x620/39edc5c4-fd37-4865-94df-88cfbc8cbd88/i/927399/aea768fa-8b45-4ae1-9d1f-ec274965abb2_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="tiWtnNHCHe6h6M6fnnMZ3fktywbpAFoaKqT0fXPHXdI="></script>
+    nonce="NnhFojNk5kflXq0nEbcJRJ84zn79MPr4w1a2eXV8dDg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -163,7 +165,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/927399/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               58
@@ -178,14 +180,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/927399/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               58
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
