--- a/VRChat/26/927526.html
+++ b/VRChat/26/927526.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "5h3jb4Ck9PaAmnDZ62C7BitZySR0sRjXJ+7fubHOtQU="></script>
+    "yB3V/RA06sAkGEMseJ40UezoxUdVUhdOvQWvxGMVf20="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"竹流式ショートケーキ","description":"10924△ポリゴンのショートケーキです。\n本モデルは主に以下の用途での使用を想定しております。\n\n　・VRアバター利用\n　・Unityゲーム作成\n　・動画、映像作成\n　・静止画作成\n　・Vtuber活動\n\nモデルやテクスチャの改変は自由に行っていただいて構いません。\nデータ内のパーツを他モデルに流用する事は、個人使用の範囲内でお願いします。\n\n営利・非営利問わずご利用いただけますが、営利目的・商用利用の場合は改変の有無にかかわらずクレジット記載（竹流式ショートケーキ@airgreennet）が必要です。\n※ご自身に金銭などの報酬が得られる場合はクレジット必要\n\nVRchat内で撮影された動画、スクリーンショットの映り込みに関してはクレジット不要です。\n他者の行っている凸待ち配信などへの参加はクレジット不要です。\n\nレンダリングした画像をイラストなどと組み合せてご利用いただく事も可能です。自由にご利用下さい。\n\n　●　同梱物一覧　●\n\n・FBXデータ\n・テクスチャデータ\n\n\n　■　禁止事項　■\n\n・改変の有無に関わらず、本モデルデータを再配布する行為\n・公序良俗に反する行為、政治・宗教活動、誹謗中傷目的での使用\n\n\n2018/7/8　リリース","url":"https://booth.pm/ja/items/927526","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/7dbcb1ac-257b-4189-ab1a-4aa38dcc29f7/i/927526/f217b184-6667-49cc-9f1a-e709e6747791_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="5h3jb4Ck9PaAmnDZ62C7BitZySR0sRjXJ+7fubHOtQU="></script>
+    nonce="yB3V/RA06sAkGEMseJ40UezoxUdVUhdOvQWvxGMVf20="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/927526/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               319
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/927526/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               319
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
