updated at: 2023-04-25 21:11, VRChat用3Dモデル「超獣擬我　ツツジ」 - ハイパーきめらてっく - BOOTH

--- a/VRChat/42/927242.html
+++ b/VRChat/42/927242.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "cVzl2WxiFf8cJf9smi3IKTfaFG3r87OJCkMJqIXp5ew="></script>
+    "oFyBjqKdOvLcZxuC9byN0xa/gTLgMwgWv0wDfo+TY20="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat用3Dモデル「超獣擬我　ツツジ」","description":"VRChat用モデル\n超獣擬我-ﾁｮｳｼﾞｭｳｷﾞｶﾞ-　「ツツジ」 vre1.13 (18/07/19)\n\n製作・配布：　NEG-13　(@NEG__13)\nBoothでも有料版を配布しております。中身に差異は御座いません。\nhttps://neg-13.booth.pm/items/927242\n\n\n◆内容物\n　本体　…　FBXファイル。テクスチャ\n　装備　…　剣(抜き身)、剣(納刀)、鞘、銃、ホルスターのFBXファイル。テクスチャ\n　Unitypackage　…Unityへそのままインポートしてください\n　DynamicBonen適応箇所　…　ダイナミックボーンを使用する際参考にしてください\n\n\n【使用の際の注意】\n　Unityへインポートする際は事前にVRCSDKを適応しておいてください。\n\n\n【利用について】\n当モデルの使用で起こる問題は自己責任でお願い致します。ご了承ください。\n\n◆改変について\n　自由です。ただし、改変モデル使用の際はゾーニングにご配慮ください。\n◆パーツ流用について\n　OKです。ただし商用利用などを目的としたモデルに使用する場合はご連絡ください。\n　また、パーツを流用したモデルの再配布は禁止とさせていただきます。\n　ただしVRC内でのアバターのレンタルはOKとします。\n◆商用利用\n　要相談、ご連絡ください。\n◆二次配布\n　禁止します。ただしVRC内でのレンタルはOKとします。\n◆VRChat意外での使用\n　商用利用でない限り全面的にOKです。\n◆性的コンテンツでの使用\n　OKです。","url":"https://booth.pm/ja/items/927242","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/4624dd9e-01a3-4b61-be33-4d2e9ede3984/i/927242/54c487b5-e640-49ae-aa1a-f334979ffd68_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="cVzl2WxiFf8cJf9smi3IKTfaFG3r87OJCkMJqIXp5ew="></script>
+    nonce="oFyBjqKdOvLcZxuC9byN0xa/gTLgMwgWv0wDfo+TY20="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,7 +155,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/927242/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               198
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/927242/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               198
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
