--- a/VRChat/02/926602.html
+++ b/VRChat/02/926602.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "4e+Vj4e+Fmo/qhDooW8n7JiRK6X+i/QupyEn6AoJx7o="></script>
+    "lWTtjeZJcfuINzjthXVHO7aIzUE76JlQzLb/VWXn83k="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"アルビノパフェ","description":"【説明】\nある動画の流れから生まれた伝説のパフェ\n白い物のみを乗せに乗せたパフェだ！\n黄色い所はバナナだけど\nたくあんと認識されても問題ではない。\n何せ大根おろしが飾られているのだから……\n\n【概要】\n遊びで作った+OneDriveでもともと配布済みなのもあり無料配布という形です。\n2000近くあるのでもしVRCへもっていく場合は大量に生成等させないよう対策をしてください。\n\nテクスチャは写真より少し濃い色となっております。\n\n【禁止事項】\n・禁止事項は他の人を不快にさせるといった点を\n禁止とします。\n元の名前になった人がいるのでくれぐれも\n気をつけてください。\n\n・そのまま配布物を売るのはNG。\n\n【使用方法】\n・Blenderも同梱しておいてるので改造したい方はご使用ください。\n\n・UnityPackageも入ってます。\n\n・商用利用はOK。\n\n・そのまま配布物を売るのはNG。改変とわかる程の改変後はOK\nただし責任は負いません。\n\n♦連絡先♦ \ntwitter ： @MiruOssan\nEmail : yakuro7@gmail.com\n\n♦ちょっとした宣伝♦\nyoutube：https://www.youtube.com/channel/UCort0Z_5bhL-vCf9PvwhTyA?view_as=subscriber\n\n\n\n\n","url":"https://booth.pm/ja/items/926602","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/01b894f6-18e3-4efd-93cf-8bfc9c55a251/i/926602/c444302a-e00a-4483-99af-1f2ddc472911_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="4e+Vj4e+Fmo/qhDooW8n7JiRK6X+i/QupyEn6AoJx7o="></script>
+    nonce="lWTtjeZJcfuINzjthXVHO7aIzUE76JlQzLb/VWXn83k="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +118,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -161,7 +163,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/926602/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               84
@@ -176,14 +178,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/926602/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               84
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
