--- a/VRChat/82/926282.html
+++ b/VRChat/82/926282.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "LgzvRnQM8fNdGQigkYI/v6Y0UzdrxvGIcXm4Qg6M7gc="></script>
+    "SyhOQOzPwCsJmJW16iWfzGksce/tVkqnwtzogUghnmI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【オリジナル3Dモデル】帽子のムスメ　v1.1","description":"注)現在のバージョンでは不具合がある可能性がございます。ご注意ください\n詳細(2018/07時点)\n◆内容\n\u003c帽子のムスメ\u003e\n14000ポリゴン\nVRChat内avatar performance rank:medium\n・Unity package\n・humanoid対応3Dモデル(fbxファイル)\nリップシンク5つ(aa,oh,ou,th,sil)\nアイトラッキング対応\n表情用アニメーションファイル2つ(smile,suffer)\n・テクスチャ(pngファイル)\n※今後モデルの修正\u0026アップデートを実施する予定\n\n◆コメント\n・ご不明点あればお気軽にご連絡下さい。\n\n◆Vrchat使用時のUnity側Import作業\n以下Unity画面内での作業。基本的に他のモデルのアップロード時に実施する作業と同様です。\n\n1.Unity側でVrchatSDK等環境設定を実施\n2.unitypackage読み込み\n2a.eache prefabをhierarchyにドラッグ\n3a.マテリアルへ好みのShader適用。\n(手順は省略)\n3b.vrchatSDK内CustomOverrideEntityにbow.002と各種表情の.animファイルを入れる\n3c.リップシンク(sil,pp,ff→silで埋める。aa,oh,ou→それぞれ設定。それ以外はthで埋める)\n4.vrchat avatar descripter適用、各種項目設定\n5.「VrchatSdkPanel」から「show build control panel」にてアップロード\n\n◆規約\n・必要と判断した際、許諾無しに本規約の変更ができるものとします。(その場合、利用規約は変更後の本規約に基づくものとします。)\n・本データの利用をもって本規約に同意したものとみなします。\n・モデル改変可\n・商用利用可\n・再配布不可(※2)\n・VRC_AvatarPedestalでの本データの利用は要相談\n※2.vrchat、またcluster、Vworldにおける自身のアバターとしての使用を目的としたアップロードは許可します。\n\n◆免責事項\n・当モデルの使用により何らかのトラブル・損失及び損害等が発生した場合、当方は一切の責任を負いません。\n\n◆更新履歴\n2018-7-7:ver1.0リリース\n2018-9-18\n・モデル改修\n・表情、リップシンク、モーション追加\n2018-12-04\n・テクスチャとモデルの改修。アイトラッキング対応\n2019-1-05\n軽量化","url":"https://booth.pm/ja/items/926282","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2000"},"image":"https://booth.pximg.net/c/620x620/709575db-5836-49a2-8a20-efcfb56f7174/i/926282/6c4cd528-5b0d-461b-b3d6-02fb3e4b2e49_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="LgzvRnQM8fNdGQigkYI/v6Y0UzdrxvGIcXm4Qg6M7gc="></script>
+    nonce="SyhOQOzPwCsJmJW16iWfzGksce/tVkqnwtzogUghnmI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/926282/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               85
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/926282/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               85
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
