--- a/VRChat/46/926046.html
+++ b/VRChat/46/926046.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "i+VVIn2j2Zy4Kcr5W2UqH9pYhEf4x4sQpn91Q0fiz6A="></script>
+    "qcIMrvophOO2hQib9+Td0HpGCWPqwwAZOsMflki3UPA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"聖遺物格納箱(-Holy Relics-) ","description":"3Dmodelはこちらで確認できます。\nhttps://sketchfab.com/models/6986915dd0c4479c85a642473e4f44e7\n\n\u003c詳細\u003e\n2K(2048×2048)テクスチャー,三角面数478\nUnity,VRChat用にフルスクラッチで作った箱です。 \n\n\u003c説明\u003e\nHolyRelics,あれを大人しく格納するのは一苦労。そんな貴方に\n通常のタイプとヒビの入ったタイプの2種類の箱をご用意いたしました。\n\n\u003c規約\u003e \nこのモデル自体の著作権は放棄いたしませんが\nこのモデルの個人利用,商用利用,改変を自由に許可します。\nこのモデルデータが取り出せる状態での2次配布・誹謗中傷等への使用は禁止します。","url":"https://booth.pm/ja/items/926046","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/96c985f2-7e84-49cd-a2f3-277cef2c8d4d/i/926046/1357c564-10aa-4880-91bd-e0cb0e627fe3_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="i+VVIn2j2Zy4Kcr5W2UqH9pYhEf4x4sQpn91Q0fiz6A="></script>
+    nonce="qcIMrvophOO2hQib9+Td0HpGCWPqwwAZOsMflki3UPA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/926046/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               33
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/926046/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               33
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
