updated at: 2023-04-25 21:13, リボン付き貝飾り - CaTrusty - BOOTH

--- a/VRChat/85/925185.html
+++ b/VRChat/85/925185.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "+UNnICSww7pjXr4RLMffMuKnpBLzwRwpgeAC4WePi+A="></script>
+    "ZWPQHYgq2NXj04PzXDduSSCLDHeUXbBvGfE5pj3G7ew="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"リボン付き貝飾り","description":"夏っぽいイメージの貝飾りです。\n服や水着などにワンポイントつけると可愛いかも。\n","url":"https://booth.pm/ja/items/925185","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/925185/7964a609-bcb2-4c59-8f42-e34b854f2af8_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="+UNnICSww7pjXr4RLMffMuKnpBLzwRwpgeAC4WePi+A="></script>
+    nonce="ZWPQHYgq2NXj04PzXDduSSCLDHeUXbBvGfE5pj3G7ew="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/925185/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               124
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/925185/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               124
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
