updated at: 2023-04-25 21:13, 【実物】車軸制作所デザイン名刺入れ（スチーム＆落書きVer.） - 車軸直売所 SHAJIKU store - BOOTH

--- a/VRChat/93/923093.html
+++ b/VRChat/93/923093.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "svhKoLk9Md1OqEzNhaowNs7aidYbLmrhpU+ak0kgtLw="></script>
+    "AZa/oQ7eEpIBuETF8TayIX9fTVOoyrWN4FVI7GXfLc0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【実物】車軸制作所デザイン名刺入れ（スチーム＆落書きVer.）","description":"表面はスチームデザイン、裏面は落書きを楽しむ車軸制作所のデザイン名刺入れです。\n\nこの商品はpixivFACTORYで作られた商品です。サンプル画像は完成イメージのため、実物と異なる場合があります。","url":"https://booth.pm/ja/items/923093","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3150"},"image":"https://booth.pximg.net/c/620x620/073f790d-621e-4ecf-a85e-04aa2017a614/i/923093/74e46805-774a-4972-83f6-12568995a201_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="svhKoLk9Md1OqEzNhaowNs7aidYbLmrhpU+ak0kgtLw="></script>
+    nonce="AZa/oQ7eEpIBuETF8TayIX9fTVOoyrWN4FVI7GXfLc0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -141,6 +141,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -185,7 +187,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/923093/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               2
@@ -200,14 +202,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/923093/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               2
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
@@ -368,7 +369,7 @@
                                     "legacy-list-item__content">
                                       <div class="u-d-sp-block">
                                         <span class=
-                                        "autolink u-text-wrap">2023/05/15</span>
+                                        "autolink u-text-wrap">2023/05/16</span>
                                       </div>
                                     </div>
                                   </div>
