updated at: 2023-04-25 21:15, (無料)[眼鏡]ちゅーぐらす(モノクル) - Sharono屋 - BOOTH

--- a/VRChat/82/917082.html
+++ b/VRChat/82/917082.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "jPLyH6UUzz8k9yqxnbtOxj7maJF/Qmup7xJJ9M134E4="></script>
+    "gUMJqo2JqNmUFAANM8QIlPL1Hoqlk/DOsbvJ1TA34cs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"(無料)[眼鏡]ちゅーぐらす(モノクル)","description":"主にVRChatでの利用を目的とした眼鏡(ネズミっぽいモノクル)の3Dモデルです。\n\n仕様\n　作者：@Sharono_vvv\n　ファイル形式：unitypackage\n　ポリゴン数：約600\n　その他：チーズ部分にボーン在り(Dynamic boneとかで揺らせます)\n　テクスチャ：なし（マテリアル分けのみ）\n\n利用にあたって(利用規約)\n\n　完全フリーで利用していただいて大丈夫です。\n\n　改造OK\n　商用OK\n\nその他\n　使ってる報告してくれると泣いて喜びます。\n　不具合あったらこっそり教えてね。\n","url":"https://booth.pm/ja/items/917082","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/d84d54f0-8809-4972-baee-3f190b4e9fd3/i/917082/cf759261-de83-48b9-ada8-4d62989f135a_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="jPLyH6UUzz8k9yqxnbtOxj7maJF/Qmup7xJJ9M134E4="></script>
+    nonce="gUMJqo2JqNmUFAANM8QIlPL1Hoqlk/DOsbvJ1TA34cs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -122,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -136,7 +135,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -177,7 +177,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/917082/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               142
@@ -192,14 +192,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/917082/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               142
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
